@@ -1,3 +1,8 @@
+Thu Dec 29 11:22:34 2005  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>
+
+	* lib/generator.rb: reimplemented Generator class with Thread instead of
+	  callcc, in order to fix memory leak. [ruby-dev:28142]
+
 Wed Dec 28 14:10:05 2005  Tanaka Akira  <akr@m17n.org>
 
 	* ia64.s: remove .pred.safe_across_calls directive.
